# reference-harvester

./: .gitattributes  .gitignore  API Rate Limits.txt  API Syntax Examples.txt  Commissioner for Patents Final Decisions (EFOIA).txt  ODP APIs.docx  README.md  chat_log.txt  data_dictionary_annualized_pvQ4_2025 - Data Update Notes.csv  data_dictionary_annualized_pvQ4_2025 - Patent tallies by Year.csv  data_dictionary_annualized_pvQ4_2025 - Variables.csv  data_dictionary_annualized_pvQ4_2025 1.xlsx  ptab-test.ps1  pyproject.toml
data/uspto-2026-01-13/: coverage_sources.md  coverage_sources_summary.json  failures_summary.json  failures_summary.jsonl  manifest.jsonl  run_manifest.jsonl  run_manifest_summary.json
data/uspto-2026-01-13/api_samples/: coverage.md
data/uspto-2026-01-13/artifacts/: swagger_endpoints.md  swagger_live0.meta.json  swagger_live3.meta.json
docs/: PLAN.md  audit_pack.md  endnote_mapping.md  openalex.md  outputs.md
docs/reports/: uspto-fetch-2026-01-13.md
notes/: 2026-01-13-uspto-snapshot.md
raw/harvester/uspto/: failures_additional.jsonl  (+4 more)
src/reference_harvester/: __init__.py  canonicalizer.py  citations.py  endnote_reference_type_table.xml  endnote_xml.py  log_utils.py  models.py  schema_validation.py  sidecars.py
tests/: conftest.py  test_canonicalizer.py  test_cli_run_id.py  test_endnote_xml.py  test_harvester_import.py  test_openalex_provider.py  test_ptab_proceedings.py  test_schema_validation.py  test_sidecars.py  test_uspto_crawl.py  test_uspto_endnote_export.py  test_uspto_swagger.py
tests/fixtures/: ptab_proceedings.json
(+428 files in other folders)
